// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
type Bar {
  bar: String
}

type Baz {
  baz: String
}

type Query {
  fooBar: Bar
  fooBaz: Baz
}
`;

exports[`proxy errors error with path 1`] = `
{
  _0_fooBar: fooBar {
    bar
  }
  _1_fooBaz: fooBaz {
    baz
  }
}
`;

exports[`proxy errors error with path 2`] = `
[
  "\\n        {\\n          fooBar { bar }\\n          fooBaz { baz }\\n        }\\n      ",
  {
    "errors": [
      {
        "message": "bar error",
        "locations": [
          {
            "line": 3,
            "column": 20
          }
        ],
        "path": [
          "fooBar",
          "bar"
        ]
      },
      {
        "message": "baz error",
        "locations": [
          {
            "line": 4,
            "column": 20
          }
        ],
        "path": [
          "fooBaz",
          "baz"
        ]
      }
    ],
    "data": {
      "fooBar": {
        "bar": null
      },
      "fooBaz": {
        "baz": null
      }
    }
  }
]
`;

exports[`proxy errors global error 1`] = `
{
  _0_fooBar: fooBar {
    bar
  }
  _1_fooBaz: fooBaz {
    baz
  }
}
`;

exports[`proxy errors global error 2`] = `
[
  "\\n        {\\n          fooBar { bar }\\n          fooBaz { baz }\\n        }\\n      ",
  {
    "errors": [
      {
        "message": "global error",
        "locations": [
          {
            "line": 3,
            "column": 11
          }
        ],
        "path": [
          "fooBar"
        ]
      },
      {
        "message": "global error",
        "locations": [
          {
            "line": 4,
            "column": 11
          }
        ],
        "path": [
          "fooBaz"
        ]
      }
    ],
    "data": {
      "fooBar": null,
      "fooBaz": null
    }
  }
]
`;

exports[`proxy errors multiple global errors 1`] = `
{
  _0_fooBar: fooBar {
    bar
  }
  _1_fooBaz: fooBaz {
    baz
  }
}
`;

exports[`proxy errors multiple global errors 2`] = `
[
  "\\n        {\\n          fooBar { bar }\\n          fooBaz { baz }\\n        }\\n      ",
  {
    "errors": [
      {
        "message": "first global error\\nsecond global error",
        "locations": [
          {
            "line": 3,
            "column": 11
          }
        ],
        "path": [
          "fooBar"
        ]
      },
      {
        "message": "first global error\\nsecond global error",
        "locations": [
          {
            "line": 4,
            "column": 11
          }
        ],
        "path": [
          "fooBaz"
        ]
      }
    ],
    "data": {
      "fooBar": null,
      "fooBaz": null
    }
  }
]
`;
